Clean-up of Swagger Documentation
